Add favicon, fonts and change title and metas

--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="ro">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-first-react-app</title>
+    <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
+    <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
+    
+    <meta property="og:title" content="Liceul Teoretic ...">
+    <meta property="og:description" content="Informații oficiale pentru elevi, profesori și părinți.">
+    <meta property="og:image" content="https://site.ro/images/cover.jpg">
+    <meta property="og:url" content="https://site.ro">
+    <meta property="og:type" content="website">
+    <title>I.P.L.T. Gheorghe Asachi</title>
   </head>
   <body>
     <div id="root"></div>
+    <p>Acasa</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
