--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -7,16 +7,17 @@
     <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     
-    <meta property="og:title" content="Liceul Teoretic ...">
+    <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi">
     <meta property="og:description" content="Informații oficiale pentru elevi, profesori și părinți.">
-    <meta property="og:image" content="https://site.ro/images/cover.jpg">
-    <meta property="og:url" content="https://site.ro">
+    <meta property="og:image" content="/src/assets/images/backgroundmain.jpg">
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <title>I.P.L.T. Gheorghe Asachi</title>
   </head>
   <body>
     <div id="root"></div>
     <p>Acasa</p>
+    <img src="/src/assets/images/backgroundmain.jpg" alt="">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
