--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     
-    <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi">
-    <meta property="og:description" content="Informații oficiale pentru elevi, profesori și părinți.">
+    <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
+    <meta property="og:description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
     <meta property="og:image" content="/src/assets/images/backgroundmain.jpg">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
@@ -17,7 +17,6 @@
   <body>
     <div id="root"></div>
     <p>Acasa</p>
-    <img src="/src/assets/images/backgroundmain.jpg" alt="">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
