--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -9,7 +9,7 @@
     
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     <meta property="og:description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
-    <meta property="og:image" content="/src/assets/images/backgroundmain.jpg">
+    <meta property="og:image" content="https://i.imgur.com/61utsWz.jpeg">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <title>I.P.L.T. Gheorghe Asachi</title>
