--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -2,7 +2,8 @@
 <html lang="ro">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png"/>
+    <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
