--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png"/>
     <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
+    <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
-    <meta property="og:description" content="Informații pentru elevi, profesori și părinți: orar, anunțuri, activități și contacte.">
-    <meta property="og:image" content="https://i.imgur.com/61utsWz.jpeg">
+    <meta property="og:description" content="Informații pentru elevi, profesori și părinți.">
+    <meta property="og:image" content="https://i.imgur.com/FLBI2qF.png">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
     
