--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png"/>
-    <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/ttf" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
@@ -11,10 +11,10 @@
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     <meta property="og:description" content="Informații pentru elevi, profesori și părinți.">
     <meta property="og:image" content="https://i.imgur.com/61utsWz.jpeg">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="statueofunity.space">
     <meta property="og:type" content="website">
     
-    <title>I.P.L.T. Gheorghe Asachi</title>
+    <title>I.P.L.T. Gheorghe Asachi mun.Ungheni</title>
   </head>
   <body>
     <div id="root"></div>
