--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png"/>
     <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/ttf" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Liceul Teoretic Gheorghe Asachi – informații pentru elevi, profesori și părinți.">
+    <meta name="description" content="Instituția Publică Liceul Teoretic Gheorghe Asachi, municipiul Ungheni. Adresa: Municipiul Ungheni, Strada G. Cristiuc 47. Telefon: (+373) 236 2 8 48.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
