--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -10,7 +10,7 @@
     
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     <meta property="og:description" content="Informații pentru elevi, profesori și părinți.">
-    <meta property="og:image" content="https://i.imgur.com/61utsWz.jpeg">
+    <meta property="og:image" content="/headerImages.header1.webp">
     <meta property="og:url" content="statueofunity.space">
     <meta property="og:type" content="website">
     
