--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Instituția Publică Liceul Teoretic Gheorghe Asachi, municipiul Ungheni. Adresa: Municipiul Ungheni, Strada G. Cristiuc 47. Telefon: (+373) 236 2 8 48.">
     <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
     
-    <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
+    <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni | Pagina oficială">
     <meta property="og:description" content="Informații pentru elevi, profesori și părinți.">
     <meta property="og:image" content="/headerImages/header1.webp">
-    <meta property="og:url" content="statueofunity.space">
+    <meta property="og:url" content="https://www.ltasachiungheni.com/">
     <meta property="og:type" content="website">
     
     <title>I.P.L.T. Gheorghe Asachi mun.Ungheni</title>
