--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -13,6 +13,8 @@
     <meta property="og:image" content="/headerImages/header1.webp">
     <meta property="og:url" content="https://www.ltasachiungheni.com/">
     <meta property="og:type" content="website">
+
+    <meta name="google-site-verification" content="d1U1fEVvdVYI9KtDqMjrKUo9UKFazyaK_1RwKeC5Lko" />
     
     <title>I.P.L.T. Gheorghe Asachi mun.Ungheni</title>
   </head>
