--- a/my-first-react-app/index.html
+++ b/my-first-react-app/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png"/>
     <link rel="preload" href="/src/assets/fonts/EBGaramond-Medium.ttf" as="font" type="font/ttf" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Instituția Publică Liceul Teoretic Gheorghe Asachi, municipiul Ungheni. Adresa: Municipiul Ungheni, Strada G. Cristiuc 47. Telefon: (+373) 236 2 8 48.">
-    <meta name="author" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni">
+    <meta name="description" content="Instituția Publică Liceul Teoretic Gheorghe Asachi, municipiul Ungheni. Adresa: Strada G. Cristiuc 47. Telefon: (+373) 236 2 8 48.">
+    <meta name="author" content="Liceul Teoretic Gheorghe Asachi | Ungheni">
     
     <meta property="og:title" content="Liceul Teoretic Gheorghe Asachi mun. Ungheni | Pagina oficială">
     <meta property="og:description" content="Informații pentru elevi, profesori și părinți.">
@@ -16,7 +16,7 @@
 
     <meta name="google-site-verification" content="d1U1fEVvdVYI9KtDqMjrKUo9UKFazyaK_1RwKeC5Lko" />
     
-    <title>I.P.L.T. Gheorghe Asachi mun.Ungheni</title>
+    <title>I.P.L.T. Gheorghe Asachi | Ungheni</title>
   </head>
   <body>
     <div id="root"></div>
